# deep_learning_security_system

./: .gitignore  CMakeLists.txt  README.md  README_en.md  compile_commands.json  compile_commands_docker.json  compile_commands_wsl2.json  ls.txt  lv_conf.h  main.c
.devcontainer/: Dockerfile  devcontainer.json
src/: main.cpp
src/assets/images/: face_icon.c  security_camera_icon.c
src/include/: Camera.hpp  Common.hpp  FFmpeg.hpp  Font.hpp  ImageProcess.hpp  Model.hpp  PageManager.hpp  PostProcess.hpp  RknnPool.hpp  Sensor.hpp  UI.hpp
src/module/Camera/: Camera.cpp
src/module/FFmpeg/: FFmpeg.cpp
src/module/ImageProcess/: ImageProcess.cpp
src/module/Model/: Model.cpp
src/module/PageManager/: PageManager.cpp
src/module/PostProcess/: PostProcess.cpp
src/module/RknnPool/: RknnPool.cpp
src/module/Sensor/: Sensor.cpp
src/module/UI/: AccessControlPage.cpp  MainPage.cpp  SecurityCameraPage.cpp
